tests/error/comptime_arg_errors/type_apply.err
Error: Not enough type arguments (at $FILE:14:11)
   | 
12 | @guppy
13 | def main() -> None:
14 |     foo[int](42, 43)
   |            ^ Missing type argument (expected 2, got 1)

Note: Function signature is `forall T. (T, nat @comptime) -> None`

Guppy compilation failed due to 1 previous error
